--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.11",
+        "laminas/laminas-validator": "^3.4",
         "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-data": "^4.15"
     },
@@ -26,6 +27,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
+
         }
     },
     "autoload-dev": {
